# Quizzera.PK

./: .env.backend.example  .gitignore  README.md  about.html  admin-analytics.html  admin-mcq.html  admin-users.html  admin.html  dashboard.html  docker-compose.yml  faq.html  index.html  login.html  pricing.html  privacy.html  quiz.html  support.html  terms.html  wrangler.jsonc  wrangler.toml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2024_09_01_0001_initial.py  2024_09_01_0002_mcq_options.py
backend/app/: __init__.py  db.py  deps.py  main.py  models.py  schemas.py
backend/app/core/: config.py  rbac.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: audit_log.py  exam.py  institution.py  mcq.py  subscription.py  user.py
backend/app/routers/: __init__.py  admin.py  analytics.py  auth.py  billing.py  exam.py  institution.py  mcq.py  student.py  teacher.py
backend/app/schemas/: auth.py  profile.py
backend/app/services/: email.py
frontend/: Dockerfile  index.html  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx  styles.css
frontend/app/dashboard/: page.tsx
frontend/src/: App.jsx  main.jsx
frontend/src/components/: BlueprintBuilder.jsx  DashboardLayout.jsx  McqImportForm.jsx  Navigation.jsx  ProfileForm.jsx  PublicLayout.jsx  SiteFooter.jsx  SiteHeader.jsx  UserManagementForm.jsx
frontend/src/pages/: AboutPage.jsx  AdminDashboard.jsx  AnalyticsPage.jsx  BillingPage.jsx  ExamsPage.jsx  GovernancePage.jsx  (+21 more)
(+4 files in other folders)
